# RISC-V

./: .gitignore  CMakeLists.txt  PROJECT_REPORT.md  README.md  bad_magic.elf  bad_segment.elf  bss.elf  功能正确性审计汇总.md  原始实验报告.md  报告修改建议与对照说明.md
docs/: architecture.md  debugger_manual.md  io_memory_elf_syscall.md  regression_checklist.md
examples/: hello.elf  hello.s  syscall_demo.elf  syscall_demo.ld  syscall_demo.s
execution-studio/: README.md  package.json  pnpm-lock.yaml
execution-studio/.trae/documents/: prd.md  tech-architecture.md
execution-studio/src/components/ExecutionStudio/: ConsolePanel.tsx  CpuStatePanel.tsx  Sidebar.tsx  Toolbar.tsx  Workspace.tsx  index.tsx
execution-studio/src/pages/: Home.tsx
execution-studio/src/store/: useExecutionStore.ts
include/: debugger.hpp  elf_loader.hpp  fpu.hpp  gdb_rsp.hpp  gdb_server.hpp  memory.hpp  riscv_config.hpp  riscv_isa.hpp  simulator.hpp
src/: debugger.cpp  elf_loader.cpp  fpu.cpp  gdb_rsp.cpp  gdb_server.cpp  isa.cpp  main.cpp  memory.cpp  simulator.cpp
tests/: README.md  run_tests.sh  test_array.cpp  test_breakpoint.cpp  test_cases.md  test_cpu.cpp  test_debugger.cpp  test_debugger_edges.cpp  test_elf_loader_edges.cpp  test_fpu.cpp  test_gdb_rsp.cpp  test_hello.cpp  test_illegal_exit.cpp  test_loop.cpp  test_memory.cpp  test_recursion.cpp  test_rv32uf.cpp  test_smoke.cpp  test_syscall.cpp  test_syscall_edges.cpp
